--- a/defns.tex
+++ b/defns.tex
@@ -722,7 +722,12 @@ If $V$ is closed in $M$, then $M \setminus V$ is open in $M$
 	. . .   then $M \cong N$, i.e. $f^{-1}$ is continuous
 \end{theorem}
 
-\subsection{7/17}
+
+\newpage
+
+\subsection{Week 5}
+
+\subsubsection{7/17}
 \begin{theorem}{If $M$ is compact and $f:M \to N$ is a bijection and $f$ is continuous . . .}
 	. . . then $f^{-1}$ is also continuous, so $M \cong N$
 \end{theorem}
@@ -734,7 +739,7 @@ If $V$ is closed in $M$, then $M \setminus V$ is open in $M$
 
 \begin{definition}{Embedding}
 	\begin{center}
-			If $f : M \to N$ is an \textbf{embedding} and $M$ is compact, then $f\textlbrackdbl M \textrbrackdbl$ is compact
+			$f : M \to N$ is an \textbf{embedding} if $f \textlbrackdbl M \textrbrackdbl$ is a homeomorphism
 	\end{center}
 \end{definition}
 
@@ -768,10 +773,10 @@ If $V$ is closed in $M$, then $M \setminus V$ is open in $M$
 \end{definition}
 
 \begin{definition}{Connected}
-	A space is connected if it has not proper subset this is clopen
+	A space is connected if it has no proper subset this is clopen
 \end{definition}
 
-\subsection{7/18}
+\subsubsection{7/18}
 \begin{theorem}{If $f:M \to N$ is continuous and onto, and $M$ is connected . . .}
 	\begin{center}
 		. . . then $N$ is connected
@@ -790,7 +795,7 @@ If $V$ is closed in $M$, then $M \setminus V$ is open in $M$
 	\end{center}
 \end{theorem}
 
-\subsection{7/19}
+\subsubsection{7/19}
 
 \begin{theorem}{If $S \subseteq M$ and $S$ is connected and $S \subseteq T \subseteq \text{lim}(S)$ . . .}
 	\begin{center}
@@ -823,11 +828,11 @@ If $V$ is closed in $M$, then $M \setminus V$ is open in $M$
 \end{theorem}
 
 
-\subsection{7/20}
+\subsubsection{7/20}
 
 \begin{definition}{Closure}
 	\begin{center}
-		For an set $S \subseteq M$, the \textbf{Closure} $\bar{S}$ is the smallest closed set containing $S$, i,e. the intersection of all closed sets that contain $S$\\
+		For a set $S \subseteq M$, the \textbf{Closure} $\bar{S}$ is the smallest closed set containing $S$, i,e. the intersection of all closed sets that contain $S$\\
 		$\bar{S} = \text{cl}(S) = \text{lim}(S)$\\
 		cl$(S) = S \Longleftrightarrow S$ is closed
 	\end{center}
