--- a/ps5.tex
+++ b/ps5.tex
@@ -115,15 +115,15 @@
 
 \begin{document} 
 
-%\maketitle
-%\newpage % Q1
+\maketitle
+\newpage % Q1
 
 \begin{enumerate}[series=p]
 \itep 6\\
 If $S, T \subset M$, a metric space, and $S \subset T$, prove that
 	\benu
 	\item $\bar{S} \subset \bar{T}$\\
-	$\bar{S}$ contains the limit points of $S$, so there is a sequence of elements in $S$ that converge to each limit in $S$.  The limits are also contained in $T$, so they are sequences in $T$ whose limits points are in $\bar{T}$.  Hence $\bar{S} \subset \bar{T}$
+	$\bar{S}$ contains the limit points of $S$, so there is a sequence of elements in $S$ that converge to each limit in $S$.  Since $S \subset T$, these are sequences in $T$ whose limits points are in $\bar{T}$, hence $\bar{S} \subset \bar{T}$
 	\item int$(S) \subset$ int($T$) \\
 	Let $x \in $ int($S$).  We want to show that $x \in $ int(T).  We know that $S \subset T$, int(S)$ \subset S$ and  int(T) $\subset T$.  Since $S \subset T$, we have $x \in S \implies x \in T$ and $B_r^Sx \subset S$, so $B_r^Tx \subset T$.  Hence int(S) $\subset$ int(T).
 	\eenu
@@ -135,10 +135,10 @@ If $S, T \subset M$, a metric space, and $S \subset T$, prove that
 	\begin{description}
 		\item[$M_rp$] $\{q \in M: d(p,q) < r\}$
 	\end{description}
-	\textbf{The boundary is defined to be the sphere "$< r$", so in no metric space is the boundary equal to the equal with radius $r$.}
+	The discrete metric is a metric in which the boundary of $M_rp$ is not equal to the sphere of radius $r$ at $p$.  If we choose a $p \in M$, then $M_1p = \{x \in M: d(x,p)<1\} = \{p\}$.  The sphere of radius 1, on the other hand, is $\{x \in M : d(x,p)=1 \} = M \setminus \{ p \}$.  The boundary is the intersection of these two sets, so $\partial M_1p = \overline{M_1p} \cap \overline{(M_1p)^c}$, which equals $\overline{\{p\}} \cap \overline{M \setminus \{p\}}$.  Since these two sets are closed, this is equal to $\{p\} \cap M \setminus \{p\} = \emptyset$.  Since the intersection is empty the two are not equal.
 	\\
 	\item Need the boundary be contained in the sphere?\\
-	\textbf{Yes.  In which case $M_rp$ would need to be defined as $\{ q \in M: d(p,q) \leq r\}$}
+	Yes.  
 	
 \eenu
 
@@ -151,7 +151,7 @@ Prove that if $A$ and $B$ are compact, disjoint, non-empty subsets of $M$, then 
 \textbf{Theorem:}
 If $f:M \to \mbR$, $M$ is compact and $f$ is continuous, then $f$ attains a max and min value.
 \\\\
-Since $A$ and $B$ are both compact, $A \times B$ is compact, hence $d: A \times B \to \mbR$ is compact.  \textbf{Since the function that maps a compact space to the Reals is continuous}, it follows from the theorem above that the distance between $A$ and $B$ attains a minimum value.
+$A$ and $B$ are both compact, so $A \times B$ is compact.  Since the distance function $d: A \times B \to \mbR$ is continuous, it follows from the theorem above that the distance between $A$ and $B$ attains a minimum value.
 
 \newpage
 
@@ -159,9 +159,9 @@ Since $A$ and $B$ are both compact, $A \times B$ is compact, hence $d: A \times 
 Prove that there is an embedding of the line as a closed subset of the plane, and there is an embedding of the line as a bounded subset of the plane, but there is no embedding of the line as a closed and bounded subset of the plane
 
 	\benu
-		\item \textbf{The constant function $f: \mbR \to \mbR^2$ defined by $f(x) = (x, c)$.  This is an embedding since $f \llbracket M \rrbracket$ is a homeomorphism since it is bijective and bi-continuous.  This subset of $\mbR^2$ is closed since its complement is open.}
-		\item \textbf{The mapping $f: \mbR \to \mbR^2$ defined by $f(x) = (x, 0)$ on the interval $(0,1)$ is a homeomorphism and the image is bounded subset of the plane.}
-		\item Hint: Closed and Bounded subsets of $\mbR^2$ are compact
+		\item The constant function $f: \mbR \to \mbR^2$ defined by $f(x) = (x, c)$.  This is an embedding since $f \llbracket M \rrbracket$ is a homeomorphism since it is bijective and bi-continuous.  This subset of $\mbR^2$ is closed since its complement is open.
+		\item The mapping $f: (0,1) \to \mbR^2$ defined by $f(x) = (x, 0)$ is a homeomorphism and the image is bounded subset of the plane.  Furthermore, $(0,1)$ is homeomorphic to $\mbR$.
+		\item The closed and bounded subset of $\mbR^2$ is compact, however $\mbR$ is not.  Thus there cannot be an embedding since the two are not homeomorphic.
 	\eenu
 \newpage
 
@@ -171,28 +171,57 @@ Suppose that $(K_n)$ is a nested sequence of compact non-empty sets, $K_1 \supse
 
 \itep 14\\
 The \textbf{distance} from a point $p$ in a metric space $M$ to a non-empty subset $S \subset M$ is defined to be dist$(p, S) = \text{inf}\{d(p,s): s \in S\}$.
-	\benu
-		\item Show that $p$ is a limit of $S$ if and only if dist$(p,S) = 0$
-		\item Show that $p \mapsto \text{dist}(p, S)$ is a uniformly continuous function of $p \in M$
-	\eenu
+\benu
+\item Show that $p$ is a limit of $S$ if and only if dist$(p, S) = 0$\\ % 21:00
+\\
+$\Rightarrow$  Assuming $p$ is a limit of $S$, we want to show dist$(p,S) = 0$.  Since $p$ is a limit point of $S$, there is a sequence $(a_i)$ such that $(a_i) \to p$ and $(a_i) \in S$
+\\
+$\Leftarrow$  Assuming dist$(p,S) = 0$, we want to show that $p$ is a limit of $S$.  Since dist$(p, S) = 0$, there exists some sequence that converges to the infimum.  So $d_i \to 0$ where $d_i \in \{d(p, s): s \in S\}$.  For each $d_i$ there is $s_i \in S$ such that $d(s_i, p) = d_i$.  Since $d_i \to 0, s_i \to p$.  
+%Now, we have that $0 \leq d(p,S) \leq d(p, a_i)$. Using the squeeze theorem we have that $0 %\leq d(p,S)= \text{lim } d(p, a_i) \leq d(p, a_i)$.  
+Hence $p$ is a limit of $S$.
+\\
+\item Show that $p \mapsto \text{dist}(p, S)$ is a uniformly continuous function of $p \in M$ % 30:00
+\\
+\begin{comment}
+
+We want to show that $\forall \ep > 0 \, \exists \, \delta > 0 \, \forall x,y \in M$ such that $d(x,y) < \delta \implies |\text{dist}(x,s) - \text{dist}(y,s) < \ep|$\\
+\end{comment}
+We want to show that $|f(p)-f(q)|<d(p,q)$.  By The Triangle Inequality, $d(p,S) \leq d(p,q)+d(q,S)$.  Given $p,q \in M$, WLOG $d(p,S) - d(q,S) \geq 0$.
+
+
+Now, notice that (using the WLOG in the first equality and the observation in the inequality)
+
+
+$|d(p,S)-d(q,S)|=d(p,S)-d(q,S) \leq d(p,q)+d(q,S)-d(q,S)=d(p,q)$.
+
+
+Therefore, $|f(p)-f(q)|=|d(p,S)-d(q,S)| \leq d(p,q)$.
+
+
+This implies uniformly continuity since given $\epsilon$, we can take $\delta = \epsilon$. Therefore, if $d(p,q)<\delta = \epsilon$ then $|f(p)-f(q)|<d(p,q)<\epsilon$.
+
+\eenu
 \newpage
 
 \itep 41\\
 Prove that the 2-sphere is not homeomorphic to the plane\\
 \\
-\textbf{The 2-sphere is compact and the plane is not, so the two cannot be homeomorphic.}
+The 2-sphere is closed and bounded in $\mbR$ so it is compact.  The plane, however, is not compact, so the two cannot be homeomorphic.
 
 \newpage
 \itep 54\\
 If $S$ is connected, is the interior of $S$ connected?  Prove this or give a counter-example
-
+\\\\
+The plane is a counter-example since it is connected but its interior is not.
 \newpage
 
 \itep 55\\
 Theorem 51 states that the closure of a connected set is connected.
 	\benu
-		\item Is the closure of a disconnected set disconnected
-		\item What about the interior of a disconnected set?
+		\item Is the closure of a disconnected set disconnected\\
+		No.  The closure of $\mbQ$, a disconnected set, is $\mbR$, a connected set.
+		\item What about the interior of a disconnected set?\\
+		No.  The set $[0,1] \cup \{2\}$ is disconnected , but its interior $(0,1)$ is connected.
 	\eenu
 \newpage
 
@@ -202,15 +231,25 @@ Prove that every countable metric space (not empty and not a singleton) is disco
 \newpage
 \itep 59\\
 Prove that the annulus $A = \{z \in \mbR^2: r \leq |z| \leq R\}$ is connected.
-
+\\
+Th annulus is a 2-dimensional ring-shaped object.  Any 2 points can be path-connected  - and therefore connected - by a continuous function be determining an arc between the two points of appropriate radius and center.
+\\
+Let $x$ and $y$ be two points in the annulus.  If they are in the same quadrant, fix a point $p$ at $(1 + n) \pi /4$ on the outer boundary of the annulus, where $n$ is the quadrant of the annulus they are in.  The two points $x, y$ can connected to $p$ by a straight line so they are path-connected to $p$ and therefore connected.  Otherwise, fix two points $p,q$ on the outer boundary of the annulus which can be connected with a straight line so that $x$ can connect to $q$ by a straight line and $y$ and connect to $q$ by a straight line.  The two points $x, y$ can connected to $p, q$, respectively, by a straight line so they are path-connected and therefore connected.  
 \newpage
 \itep 64a\\
 Prove that every connected open subset of $\mbR^m$ is a path connected.
-
+\\\\
+We want to show that if we have a connected open subset of $\mbR$ then the subset if path connected.
+\\
+\textbf{Connected:}  $M$ is \textbf{connected} iff it is not the union of two non-empty, disjoint open sets.
+\\
+By the definition above, the subsets have a non-empty intersection, so  . . .  
 \newpage
 \itep 68\\
 Prove that $(a,b)$ and $[a,b]$ are not homeomorphic metric spaces
-
+\\
+\\
+$[a,b]$ is a compact space, but $(a,b)$ is not.  Therefore there is no continuous function $f : [a,b] \to (a,b)$ so the two cannot be homeomorphic.
 
 \newpage
 
@@ -218,8 +257,11 @@ Prove that $(a,b)$ and $[a,b]$ are not homeomorphic metric spaces
 Let $M$ and $N$ be non-empty metric spaces
 	\benu
 		\item If $M$ and $N$ are connected, prove that $M \times N$ is connected
+		Suppose towards a contradiction that $M, N$ connected imples $M \times N$ is disconnected.  If $M \times N$ is disconnected, then it contains a clopen subset in either $M$ or $N$, but they are both connected.
 		\item What about the converse?
+		
 		\item Answer the question again for path-connectedness
+		Suppose towards a contradiction that $M, N$ path-connected imples $M \times N$ is not path-connected.  If $M \times N$ is not path-connected, then there does not exist a continuous function that joins every point in $M \times N$ to another.  So then either $M$ or $N$ is not path-connected.  But hey are both path-connected.
 	\eenu
 \newpage
 
@@ -227,6 +269,8 @@ Let $M$ and $N$ be non-empty metric spaces
 \itep 74\\
 	\benu
 		\item The intersection of connected sets need not be connected.  Give an example.
+		\\
+		A circle and a line are both connected sets, however the intersection of the line across the diameter of the circle is the set os two disconnected points.
 		\item Suppose that $S_1, S_2, S_3, \dots$ is a sequence of connected, closed subsets of the plane and $S_1 \supset S_2 \supset \dots$.  Is $S = \bigcap S_n$ connected?
 		\item * Does the answer change if the sets are compact
 		\item What is the situation for a nested decreasing sequence of compact path-connected sets?
@@ -237,9 +281,7 @@ Let $M$ and $N$ be non-empty metric spaces
 \itep 77\\
 If a metric space $M$ is the union of path-connected sets $S_\alpha$, all of which have the path-connected set $K$ in common, is $M$ path-connected?\\
 \\
-\textbf{Theorem:} The union of connected sets sharing a common point is connected
-\\\\
-Since connected and path-connected are equivalent, by the the theorem above $M$ is path-connected
+Let $p \in K$ and $a,b \in \bigcup_{\alpha \in \mbZ}S_\alpha$.  Then there exists $\alpha_1$ and $\alpha_2$ such that $a \in S_{\alpha_1}$ and $S_{\alpha_2}$.  As well, $K \cap S_{\alpha_1} \neq \emptyset$ and $K \cap S_{\alpha_2} \neq \emptyset$.  Now let $f$ be a continuous function that describes a path from $a$ to $p$, and $g$ a continuous function that describes a path from $p$ to $b$.  Then, since the composition of continuous functions is continuous, there exists a continuous function that connects $a$ and $b$, hence $M$ is path-connected.
 
 
 \end{enumerate}
